--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,15 @@ edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
+calculator-rs = "0.1.2"
+env_logger = "0.11.5"
 i18n-embed-fl = "0.8"
+log = "0.4.22"
 once_cell = "1.19.0"
 open = "5.1.3"
+paste = "1.0.15"
 rust-embed = "8.3.0"
+serde = { version = "1.0.208", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["full"] }
 
 [dependencies.libcosmic]
