--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tokio = { version = "1.37.0", features = ["full"] }
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
 default-features = false
-features = ["dbus-config", "tokio", "winit", "wgpu"]
+features = ["dbus-config", "tokio", "winit", "wgpu", "multi-window"]
 
 [dependencies.i18n-embed]
 version = "0.14"
