--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ calculator-rs = "0.1.2"
 i18n-embed-fl = "0.8"
 log = "0.4.22"
 once_cell = "1.19.0"
-open = "5.1.3"
 paste = "1.0.15"
 pretty_env_logger = "0.5.0"
 rust-embed = "8.3.0"
@@ -19,7 +18,7 @@ tokio = { version = "1.37.0", features = ["full"] }
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
 default-features = false
-features = ["dbus-config", "tokio", "winit", "wgpu", "multi-window"]
+features = ["dbus-config", "tokio", "winit", "wgpu", "multi-window", "desktop"]
 
 [dependencies.i18n-embed]
 version = "0.14"
