--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ calculator-rs = "0.1.2"
 i18n-embed-fl = "0.8"
 log = "0.4.22"
 once_cell = "1.19.0"
+open = "5.3.0"
 paste = "1.0.15"
 pretty_env_logger = "0.5.0"
 rust-embed = "8.3.0"
