--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
-calculator-rs = "0.1.2"
+evalexpr = "12.0.2"
 i18n-embed-fl = "0.8"
 log = "0.4.22"
 once_cell = "1.19.0"
