--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,26 @@
 [package]
 name = "cosmic-ext-calculator"
 version = "0.1.1"
-edition = "2021"
+edition = "2024"
 license = "GPL-3.0"
 
 [dependencies]
-evalexpr = "12.0.2"
+pop-launcher = { git = "https://github.com/pop-os/launcher/" }
+pop-launcher-service = { git = "https://github.com/pop-os/launcher/" }
 i18n-embed-fl = "0.8"
-log = "0.4.22"
 once_cell = "1.19.0"
 open = "5.3.0"
 paste = "1.0.15"
-pretty_env_logger = "0.5.0"
 rust-embed = "8.3.0"
 serde = { version = "1.0.208", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["full"] }
+tokio-stream = "0.1.17"
+futures = "0.3.31"
+tracing = "0.1.41"
+
+[dependencies.tracing-subscriber]
+version = "0.3.19"
+features = ["env-filter"]
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
