--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,17 @@
 [package]
 name = "cosmic-ext-calculator"
-version = "0.1.1"
-edition = "2021"
+version = "0.2.0"
+edition = "2024"
 license = "GPL-3.0"
 
 [dependencies]
-evalexpr = "12.0.2"
 i18n-embed-fl = "0.8"
-log = "0.4.22"
-once_cell = "1.19.0"
 open = "5.3.0"
-paste = "1.0.15"
-pretty_env_logger = "0.5.0"
+regex = "1.11.2"
 rust-embed = "8.3.0"
 serde = { version = "1.0.208", features = ["derive"] }
-tokio = { version = "1.37.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
@@ -25,43 +22,9 @@ features = ["tokio", "winit", "about"]
 version = "0.14"
 features = ["fluent-system", "desktop-requester"]
 
+[dependencies.tokio]
+version = "1.47.1"
+features = ["fs", "io-std", "io-util", "macros", "process", "rt"]
+
 [patch."https://github.com/smithay/client-toolkit.git"]
 sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
-
-# Uncomment to test a locally-cloned libcosmic
-# [patch.'https://github.com/pop-os/libcosmic']
-# libcosmic = { path = "../libcosmic" }
-# cosmic-config = { path = "../libcosmic/cosmic-config" }
-# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
-
-# Cargo deb
-# Edit here to customize the package metadata
-# Especially the Assets section
-[package.metadata.deb]
-maintainer = "Your Name, <your@email.com>"
-copyright = "2024 Your Name"
-# license-file = "LICENSE"
-extended-description = """\
-Describe your app here. \
-"""
-depends = "$auto"
-section = "utility"
-priority = "optional"
-assets = [
-    [
-        "target/release/cosmic-ext-calculator",
-        "usr/bin/cosmic-ext-calculator",
-        "755",
-    ],
-    [
-        "res/metainfo.xml",
-        "usr/share/metainfo/dev.edfloreshz.Calculator.metainfo.xml",
-        "644",
-    ],
-    [
-        "res/app.desktop",
-        "usr/share/applications/dev.edfloreshz.Calculator.desktop",
-        "644",
-    ],
-    #    ["res/icons/hicolor/", "usr/share/icons/hicolor/", "644"]
-]
