--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ i18n-embed-fl = "0.8"
 open = "5.3.0"
 regex = "1.11.2"
 rust-embed = "8.3.0"
+semver = "1.0.27"
 serde = { version = "1.0.208", features = ["derive"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
