i18n(es): add translation

--- a/res/app.desktop
+++ b/res/app.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Calculator
 Name[pt]=Calculadora
+Name[es]=Calculadora
 Exec=cosmic-ext-calculator %F
 Terminal=false
 Type=Application
