--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
 default-features = false
-features = ["tokio", "winit", "about"]
+features = ["tokio", "winit", "about", "wayland"]
 
 [dependencies.i18n-embed]
 version = "0.14"
