--- a/res/app.desktop
+++ b/res/app.desktop
@@ -5,6 +5,7 @@ Name[pl]=Kalkulator
 Name[pt]=Calculadora
 Name[es]=Calculadora
 Name[hu]=Számológép
+Name[uk]=Калькулятор
 Exec=cosmic-ext-calculator %F
 Terminal=false
 Type=Application
@@ -13,4 +14,5 @@ Icon=dev.edfloreshz.Calculator
 Categories=COSMIC;Utility;
 Keywords=Folder;Manager;
 Keywords[cs]=výpočty;spočítat;
+Keywords[uk]=обчислити;
 MimeType=
